KBmenu/force-app/main/default/objects/Project_Ln__c/Project_Ln__c.object-meta.xml
<CustomObject>
    <label>Project Ln</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Line</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>