KBmenu/force-app/main/default/objects/Project_Ln__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Project Lines</relationshipLabel>
    <relationshipName>Project_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>