KBmenu/force-app/main/default/objects/Project_Ln__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <referenceTo>project__c</referenceTo>
    <relationshipLabel>Project Lines</relationshipLabel>
    <relationshipName>Project_Lines1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>