KBmenu/force-app/main/default/objects/Project_Ln__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Installation</fullName>
            </value>
            <value>
                <fullName>Configuration</fullName>
            </value>
            <value>
                <fullName>Scripting</fullName>
            </value>
            <value>
                <fullName>Supporting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>